[package]
name = "win"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
] }
